Fix cutoff text Show more

--- a/index.css
+++ b/index.css
@@ -206,7 +206,7 @@ b {
 }
 .readmore {
   position: absolute;
-  height: 15px;
+  height: 1rem;
   width: 100%;
   bottom: 0;
   left: 0;
@@ -220,7 +220,7 @@ b {
   position: absolute;
   width: 100%;
   height: 30%;
-  bottom: 15px;
+  bottom: 1rem;
   left: 0;
   background-image: linear-gradient(rgba(255, 255, 255, 0), rgba(255, 255, 255, 1));
   /* border: 1px solid gray; */
